--- a/src/scss/components/about_page/banner.scss
+++ b/src/scss/components/about_page/banner.scss
@@ -52,6 +52,7 @@
     h1 {
       font-family: 'Play', sans-serif;
       font-size: 55px;
+      text-align: center;
 
       &.long-title {
         font-size: 45px;
