--- a/src/scss/components/secondary-nav.scss
+++ b/src/scss/components/secondary-nav.scss
@@ -127,5 +127,9 @@
         }
       }
     }
+
+    section#content.content {
+      padding-left: 1rem !important;
+    }
   }
 }
