--- a/src/scss/components/staff-card.scss
+++ b/src/scss/components/staff-card.scss
@@ -24,7 +24,7 @@
     height: 100%;
     width: 100%;
     min-width: 250px;
-    max-width: 350px;
+    max-width: 320px;
     text-align: center;
     overflow: hidden;
 
